@@ -1,5 +1,15 @@
 2018-02-21  Don Olmstead  <don.olmstead@sony.com>
 
+        [CMake] Expose HAVE macros globally
+        https://bugs.webkit.org/show_bug.cgi?id=183011
+
+        Reviewed by Michael Catanzaro.
+
+        * Source/cmake/OptionsCommon.cmake:
+        * Source/cmake/WebKitFeatures.cmake:
+
+2018-02-21  Don Olmstead  <don.olmstead@sony.com>
+
         [CMake][Win] Use cmakeconfig.h rather than config.h and Platform.h
         https://bugs.webkit.org/show_bug.cgi?id=182883
 
